# NoteBook

./: README.md
.obsidian/: workspace.json
NoteBook/: Github.md
NoteBook/BakUp/: Question.md
NoteBook/Code/: GUI库 的选择.md  本地ai代码辅助插件.md
NoteBook/Code/CPP/: C++命令工具开发.md  CPP 标准算法.md  SQLitecpp 基本操作.md  cuda安装配置.md  vcpkg.md  vscode cmake 插件.md  使用boost进行文字编码转换.md  使用icu进行文字编码转换.md  使用opencc进行繁简转换.md  现代c++编程要点.md
NoteBook/Code/CPP/Cmake/: basic.md  (+1 more)
NoteBook/Code/CPP/Cmake/CppUseImguiForCmakeAndConan/: CMakeLists.txt  conan.md  conanfile.txt  main.cpp
NoteBook/Code/CPP/Cmake/CppUseQtForCmakeDemo/: CMakeLists.txt  main.cpp
NoteBook/Code/Latex/: 默认文档配置.md
NoteBook/Code/Python/: Sympy.md  conda.md  jupyter.md  python绘图库.md  python设置.md
NoteBook/Code/Rust/: Cargo 使用要点.md  Rust库.md  Rust生成文件最小化.md  SQLite基本操作.md  Tauri 技术要点.md  cargo config.md  rust 编程要点.md  rust基本操作.md  rust安装.md  库.md  格式化输出.md  生成支持.md  随便写写.md
NoteBook/Docker/: Docker初始化设置.md  Podman.md  图形界面.md
NoteBook/Linux/: 压缩.md
NoteBook/Linux/Nvidia/: cudatool.md
NoteBook/Linux/安全/: Clamav.md  dislocker解锁bitlcoker.md
NoteBook/Linux/应用/: snapd.md
NoteBook/Linux/数据库/: mongodb.md
NoteBook/Linux/服务/: nginx.md  samba.md
NoteBook/Linux/系统/: Centos7 密码重置.md  opensuse 修改软件源.md  pve.md  多版本应用管理.md  文件系统.md
NoteBook/Math/线性代数/: 线性代数简介.md  行列式.md
NoteBook/Question/: 计算机二级C语言题目解析.md
NoteBook/Windows/: Windows合并两个物理磁盘.md  脚本设置电源选项.md
微末之技/Tools/: 1日期时间计算.cc  在Markdown中使用Base64插入图片.md
微末之技/应用开发/: ShareAny HTTP文件共享.md
微末之技/程序员算法趣题/入门篇/: Q01  Q01.cc  Q02  Q02.cc  Q03  Q03.c  Q04  Q04.c
(+45 files in other folders)
