cmake_minimum_required(VERSION 3.13.0)
project(p1 VERSION 0.1.0)

include_directories(D:/Lib/Qt/5.15.2/msvc2019_64/include ${QT5_INCLUDE_PATHS})
add_executable(p1 main.cpp)
target_link_directories(p1 PUBLIC D:/Lib/Qt/5.15.2/msvc2019_64/lib ${QT5_LIB_PATHS})
target_link_libraries(p1 Qt5Widgets Qt5Core)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
